[gd_scene load_steps=7 format=3 uid="uid://heysnrwhvn7i"]

[ext_resource type="Script" uid="uid://c7pcvpxhhpf2l" path="res://scripts/win_screen.gd" id="1_2l6cc"]
[ext_resource type="Texture2D" uid="uid://bvys7gkxm7iwk" path="res://assets/win_screen.png" id="1_wv5lq"]
[ext_resource type="Texture2D" uid="uid://b8ka4log3pip0" path="res://assets/results_ui.png" id="2_erk2x"]
[ext_resource type="AudioStream" uid="uid://b4u8vaok4vy0l" path="res://assets/fwwuuuu.wav" id="4_e41g7"]

[sub_resource type="LabelSettings" id="LabelSettings_erk2x"]
font_size = 90
font_color = Color(0.345098, 0.301961, 0.211765, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2l6cc"]
font_size = 65
font_color = Color(0.345098, 0.301961, 0.211765, 1)

[node name="win_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2l6cc")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_wv5lq")

[node name="Node2D" type="Node2D" parent="."]
scale = Vector2(1.5, 1.5)

[node name="TextureRect2" type="TextureRect" parent="Node2D"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 1242.67
offset_top = 262.0
offset_right = 1562.67
offset_bottom = 762.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("2_erk2x")

[node name="Label" type="Label" parent="Node2D"]
offset_left = 1396.0
offset_top = 352.0
offset_right = 1447.0
offset_bottom = 476.0
text = "0"
label_settings = SubResource("LabelSettings_erk2x")

[node name="Label2" type="Label" parent="Node2D"]
offset_left = 1453.33
offset_top = 494.0
offset_right = 1504.33
offset_bottom = 618.0
text = "0"
label_settings = SubResource("LabelSettings_erk2x")

[node name="Label3" type="Label" parent="Node2D"]
offset_left = 1376.0
offset_top = 628.0
offset_right = 1542.0
offset_bottom = 752.0
text = "00:00"
label_settings = SubResource("LabelSettings_2l6cc")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_e41g7")
autoplay = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
